--- a/src/app/posts/post-create/post-create.component.html
+++ b/src/app/posts/post-create/post-create.component.html
@@ -1,25 +1,60 @@
 <mat-card class="post-create">
   <mat-spinner *ngIf="isLoading"></mat-spinner>
-  <h1>Create new Task</h1>
-  <p class="text-muted">Please fill below details</p>
-  <form [formGroup]="form" (submit)="onSavePost()" *ngIf="!isLoading">
-    <table class="margin-auto form-table">
-      <tr>
-        <td>
-          <mat-form-field class="form-table-td" appearance="outline">
-            <input
-              matInput
-              type="text"
-              formControlName="title"
-              placeholder="Task Title"
-            />
-            <mat-error *ngIf="form.get('title').invalid"
-              >Please enter a post title.</mat-error
-            >
-          </mat-form-field>
-        </td>
-        <td>
-          <!-- <div class="pick-image">
+  <form (submit)="onSavePost(postForm)" #postForm="ngForm" *ngIf="!isLoading">
+    <mat-form-field>
+      <input
+        matInput
+        name="title"
+        [ngModel]="post?.title"
+        type="text"
+        placeholder="Task Title"
+        #title="ngModel"
+        required
+      />
+      <mat-error *ngIf="title.invalid">Please enter a valid title.</mat-error>
+    </mat-form-field>
+    <mat-form-field>
+      <input
+        matInput
+        name="description"
+        [ngModel]="post?.content"
+        type="text"
+        placeholder="Task description"
+        #description="ngModel"
+        required
+      />
+      <mat-error *ngIf="description.invalid"
+        >Please enter a valid description.</mat-error
+      >
+    </mat-form-field>
+    <mat-form-field>
+      <input
+        matInput
+        name="time"
+        [ngModel]="post?.time"
+        type="text"
+        placeholder="Task time"
+        #time="ngModel"
+        required
+      />
+      <mat-error *ngIf="time.invalid">Please enter a valid time.</mat-error>
+    </mat-form-field>
+    <mat-form-field>
+      <mat-label>Select an option</mat-label>
+      <mat-select
+        [ngModel]="post?.status"
+        name="status"
+        #status="ngModel"
+        required
+        [(value)]="selected"
+      >
+        <mat-option value="NotStarted">Not Started</mat-option>
+        <mat-option value="In Progress">In Progress</mat-option>
+        <mat-option value="Completed">Completed</mat-option>
+      </mat-select>
+    </mat-form-field>
+
+    <!-- <div class="pick-image">
       <button mat-stroked-button type="button" (click)="filePicker.click()">
         Pick Image
       </button>
@@ -31,45 +66,29 @@
     >
       <img [src]="imagePreview" [alt]="form.value.title" />
     </div> -->
-          <mat-form-field class="form-table-td" appearance="outline">
-            <input
-              type="text"
-              matInput
-              formControlName="content"
-              placeholder="Task Description"
-            />
-            <mat-error *ngIf="form.get('content').invalid"
-              >Please enter a task Description.</mat-error
-            >
-          </mat-form-field>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <mat-form-field class="form-table-td" appearance="outline">
-            <mat-label>Select</mat-label>
-            <mat-select>
-              <mat-option value="option">Not Started</mat-option>
-              <mat-option value="option">In Progress</mat-option>
-              <mat-option value="option">Completed</mat-option>
-            </mat-select>
-          </mat-form-field>
-        </td>
-        <td>
-          <mat-form-field class="form-table-td" appearance="outline">
-            <input
-              type="text"
-              matInput
-              formControlName="time"
-              placeholder="Estimated Time"
-            />
-            <mat-error *ngIf="form.get('time').invalid"
-              >Please enter a Estimated Time.</mat-error
-            >
-          </mat-form-field>
-        </td>
-      </tr>
-    </table>
+    <!-- <mat-form-field>
+      <textarea matInput rows="4" formControlName="content" placeholder="Post Content"></textarea>
+      <mat-error *ngIf="form.get('content').invalid">Please enter a post title.</mat-error>
+    </mat-form-field>
+
+    <div>
+      <mat-form-field>
+        <input matInput type="text" formControlName="time" placeholder="Estimated Time" />
+        <mat-error *ngIf="form.get('time').invalid">
+          Please enter a post title.</mat-error>
+      </mat-form-field>
+      <mat-form-field>
+        <mat-label>Select an option</mat-label>
+        <mat-select formControlName="status" [(value)]="selected">
+          <mat-option value="NotStarted">Not Started</mat-option>
+          <mat-option value="In Progress">In Progress</mat-option>
+          <mat-option value="Completed">Completed</mat-option>
+        </mat-select> -->
+    <!-- <mat-error *ngIf="form.get('title').invalid"
+          >Please enter a post title.</mat-error
+        > -->
+    <!-- </mat-form-field> -->
+    <!-- </div> -->
     <button mat-raised-button color="accent" type="submit">Save Post</button>
   </form>
 </mat-card>
