--- a/src/app/posts/post-list/post-list.component.css
+++ b/src/app/posts/post-list/post-list.component.css
@@ -129,3 +129,143 @@ mat-paginator {
   letter-spacing: 0.5px;
   border-radius: 10%;
 }
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+h2 {
+  display: flex;
+  justify-content: center;
+  align-self: center;
+}
+
+.list-container {
+  flex-direction: row;
+  justify-content: space-around;
+  margin-top: 2em;
+
+}
+
+.column-container {
+  max-width: 100%;
+  margin: 0 25px 25px 0;
+  display: inline-block;
+  vertical-align: top;
+  /* background-color: RGBA(255, 255, 255, 0.05); */
+}
+
+.new-group{
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+}
+
+mat-card {
+  margin: 1em;
+  cursor: pointer;
+}
+
+.list {
+  border: white dotted 2px;
+  border-radius: 2px;
+  display: flex;
+}
+
+.list-item {
+  margin: 10px;
+  padding: 20px 10px;
+  border-bottom: solid 1px #ccc;
+  color: rgba(0, 0, 0, 0.87);
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  box-sizing: border-box;
+  cursor: move;
+  background: white;
+  font-size: 14px;
+}
+
+.cdk-drag-preview {
+  box-sizing: border-box;
+  border-radius: 4px;
+  box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
+  0 8px 10px 1px rgba(0, 0, 0, 0.14),
+  0 3px 14px 2px rgba(0, 0, 0, 0.12);
+}
+
+.cdk-drag-placeholder {
+  opacity: 0;
+}
+
+.cdk-drag-animating {
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
+
+.example-box:last-child {
+  border: none;
+}
+
+.example-list.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
+
+a {
+  text-decoration: none;
+  color: dodgerblue;
+}
+.new-group{
+  display: flex;
+  height: 30%;
+}
+.ui.header{
+  margin: auto;
+}
+.ui.corner.labeled.input{
+  margin: auto;
+}
+
+.ui.modal.active.scale.animate__animated.animate__backInUp{
+  /* width: 50%;
+  height: 40%;
+  margin-left: 10%; */
+  padding-top: 5%;
+  /* background-color:#ffffff4a ; */
+  background-color:transparent ;
+  width: 100%;
+  
+    background-color: #ded5d578;
+}
+.description.new-group{
+  height: auto;
+  background-color: white;
+  padding: 2%;
+}
+.ui.header{
+  font-size: small;
+  font-weight: 500;
+}
+.actions{
+  border-top: solid 1px #DEDEDF;
+  background-color: white;
+  padding: 2%;
+  border-bottom-left-radius:.28571429rem;
+  border-bottom-right-radius:.28571429rem;
+  display: flex;
+  justify-content: flex-end;
+}
+.header{
+  border-bottom: solid 1px grey;
+    padding-bottom: 2%;
+    font-weight: 800;
+    font-size: large;
+}
+.new-group-box{
+  background-color: white;
+    width: 50%;
+    margin-left: 30%;
+    padding: 2%;
+}
