--- a/src/app/posts/post-list/post-list.component.html
+++ b/src/app/posts/post-list/post-list.component.html
@@ -2,12 +2,18 @@
 
 <div class="container">
   <div class="new-group">
-    <button class="ui icon button" (click)="addGroup()">
+    <button class="ui icon button" (click)="addGroup('Create')">
       <i class="plus icon"></i>
     </button>
+   
   </div>
-  <div class="list-container">
-    <h4 style="color: white;">Type1</h4>
+  <div class="list-container" *ngFor="let group of groupList">
+    <div class="display-flex justify-space-between">
+    <h4 style="color: white;" >{{group.groupList}}</h4>
+    <button style="margin-bottom: 1%;" class="ui mini icon button" (click)="deleteGroup(group.groupList)">
+      <i class="trash icon"></i>
+    </button>
+    </div>
     <div class="todo-container column-container">
       <div class="list" cdkDropList #todoList="cdkDropList" [cdkDropListData]="posts"
         [cdkDropListConnectedTo]="[doneList]" (cdkDropListDropped)="onDrop($event)" cdkDropListOrientation="horizontal">
@@ -53,53 +59,7 @@
         </div>
       </div>
     </div>
-    <h4 style="color: white;">Type2</h4>
-
-    <div class="done-container column-container">
-      <div class="list" cdkDropList #doneList="cdkDropList" [cdkDropListData]="posts"
-        [cdkDropListConnectedTo]="todoList" (cdkDropListDropped)="onDrop($event)" cdkDropListOrientation="horizontal">
-        <div *ngIf="posts.length > 0 && !isLoading" class="posts-list">
-          <div class="row">
-            <div class="ui link cards example-card col-sm-6 col-md-4 col-lg-3" *ngFor="let post of posts" cdkDrag>
-              <div class="card task-card">
-                <div class="content">
-                  <img class="right floated mini ui image" src="../../../assets/elliot.jpg" />
-                  <div class="card-header-actions right floated badge">
-                    <span [ngClass]="{
-                        'badge-notstarted': post.status == 'NotStarted',
-                        'badge-completed': post.status === 'Completed',
-                        'badge-inprogress': post.status === 'In Progress'
-                      }">1</span>
-                  </div>
-                  <div class="header">
-                    {{ post.userName }}
-                  </div>
-                  <div class="meta">
-                    {{ post.title }}
-                  </div>
-                  <div class="meta">
-                    {{ post.time }}
-                  </div>
-                  <div class="description display-flex justify-flex-end">
-                    {{ post.content }}
-                  </div>
-                </div>
-                <div class="extra content right floated ui">
-                  <div class="mini ui two buttons">
-                    <div class="ui basic green button" [routerLink]="['/posts/edit', post.id]">
-                      <i class="icon edit"></i>Edit
-                    </div>
-                    <div class="ui basic red button" (click)="onDelete(post.id)">
-                      <i class="icon trash">&nbsp; Delete</i>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+    
 
   </div>
 </div>
@@ -120,12 +80,12 @@ showModal
     <div class="new-group-box">
       <i class="close icon" (click)="close()"></i>
     <div class="header">
-      Create New Group
+      {{action}} Group
     </div>
 
     <form (submit)="createGroup(createGroupForm)" #createGroupForm="ngForm" *ngIf="!isLoading">
       <div class="description new-group">
-        <p class="text-muted">Provide name for new Group.</p>
+        <p class="text-muted">Provide name for Group.</p>
         <div class="ui corner labeled input">
           <input name="groupName" ngModel type="text" placeholder="Input..." #groupName="ngModel" required />
           <div class="ui corner label">
@@ -138,9 +98,13 @@ showModal
         <div class="ui red deny button small" (click)="close()">
           Cancel
         </div>
-        <div class="ui positive icon button small" (click)="createGroup(groupName)">
-          Create
+        <div class="ui positive icon button small" *ngIf="action === 'Create'"  (click)="createGroup(groupName)">
+          {{action}}
         </div>
+        <div class="ui positive icon button small" *ngIf="action === 'Delete'" (click)="deleteGroup(groupName)">
+          {{action}}
+        </div>
+        
       </div>
     </form>
     </div>
