--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -11,7 +11,7 @@
     *ngIf="userIsAuthenticated"
     routerLink="/posts/create"
     routerLinkActive="mat-accent"
-    >New Post</a
+    >New Task</a
   >
   <a
     mat-list-item
