--- a/src/app/posts/post-list/post-list.component.html
+++ b/src/app/posts/post-list/post-list.component.html
@@ -15,32 +15,32 @@
     </button>
     </div>
     <div class="todo-container column-container">
-      <div class="list" cdkDropList #todoList="cdkDropList" [cdkDropListData]="type1List"
+      <div class="list" cdkDropList #todoList="cdkDropList" [cdkDropListData]="posts"
         [cdkDropListConnectedTo]="[doneList]" (cdkDropListDropped)="onDrop($event)" cdkDropListOrientation="horizontal">
-        <div *ngIf="type1List.length > 0 && !isLoading" class="posts-list">
+        <div *ngIf="posts.length > 0 && !isLoading" class="posts-list">
           <div class="row">
-            <div class="ui link cards example-card " *ngFor="let post of type1List" cdkDrag>
+            <div class="ui link cards example-card " *ngFor="let post of posts" cdkDrag>
               <div class="card task-card" *ngIf="post.groupName === 'Type1'">
                 <div class="content">
                   <img class="right floated mini ui image" src="../../../assets/elliot.jpg" />
                   <div class="card-header-actions right floated badge">
-                    <span [ngClass]="{
+                    <!-- <span [ngClass]="{
                 'badge-notstarted': post.status == 'NotStarted',
                 'badge-completed': post.status === 'Completed',
                 'badge-inprogress': post.status === 'In Progress'
-              }">1</span>
+              }">1</span> -->
                   </div>
                   <div class="header">
-                    {{ post.userName }}
+                     post.userName 
                   </div>
                   <div class="meta">
-                    {{ post.title }}
+                     post.title 
                   </div>
                   <div class="meta">
-                    {{ post.time }}
+                    post.time 
                   </div>
                   <div class="description display-flex justify-flex-end">
-                    {{ post.content }}
+                    post.content 
                   </div>
                 </div>
                 <div class="extra content right floated ui">
