--- a/src/app/posts/post-list/post-list.component.css
+++ b/src/app/posts/post-list/post-list.component.css
@@ -259,7 +259,7 @@ a {
   display: flex;
   justify-content: flex-end;
 }
-.header{
+.header-post{
   border-bottom: solid 1px grey;
     padding-bottom: 2%;
     font-weight: 800;
